--- a/src/app/vente/commande/list-commande/list-commande.component.html
+++ b/src/app/vente/commande/list-commande/list-commande.component.html
@@ -6,9 +6,16 @@
           <div class="col-sm-6">
             <div class="m-b-30">
               <button id="addProduct" class="btn btn-primary waves-effect waves-light"
-                      [routerLink]="['/vente/commande/add']">Ajouter Commande<i
+                      [routerLink]="['/vente/commande/add']">Ajouter Commande <i
                 class="fa fa-plus"></i></button>
             </div>
+          </div>
+          <label class="col-sm-1 control-label"><h4>Client: </h4></label>
+          <div class="col-sm-5">
+            <select *ngIf="clients" class="form-control" name="clientsSelect" id="clientsSelect">
+              <option value="-1">Tous les Clients</option>
+              <option *ngFor="let c of clients, let i=index" value="{{i}}">{{c.name}}</option>
+            </select>
           </div>
         </div>
         <table [ngBusy]="busy" class="table table-striped table-bordered  dataTable no-footer" id="datatable"
@@ -38,12 +45,12 @@
           </thead>
           <tbody>
           <tr *ngFor="let commande of commandes; let i = index" role="row">
-            <td>{{commande.commande_id}}</td>
-            <td>{{commande.created_at}}</td>
-            <td>{{commande.client.name}}</td>
-            <td>{{commande.montant}}</td>
-            <td>{{commande.etat}}</td>
-            <td>
+            <td *ngIf="clientIndex==-1 || commande.client_id==clients[clientIndex].client_id">{{commande.commande_id}}</td>
+            <td *ngIf="clientIndex==-1 || commande.client_id==clients[clientIndex].client_id">{{commande.created_at}}</td>
+            <td *ngIf="clientIndex==-1 || commande.client_id==clients[clientIndex].client_id">{{commande.client.name}}</td>
+            <td *ngIf="clientIndex==-1 || commande.client_id==clients[clientIndex].client_id">{{commande.montant}}</td>
+            <td *ngIf="clientIndex==-1 || commande.client_id==clients[clientIndex].client_id">{{commande.etat}}</td>
+            <td *ngIf="clientIndex==-1 || commande.client_id==clients[clientIndex].client_id">
               <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-lignes-modal"
                  (click)="detailsCmd(i)"><i class="fa fa-align-left"></i></a> &nbsp;
               <!--<a [routerLink]="['/production/commande/'+commande.commande_id+'/edit']" class="text-inverse p-r-10"-->
@@ -51,7 +58,8 @@
                 <!--<i class="ti-marker-alt"></i></a>-->
               <a (click)="bon(commande.commande_id)" class="text-inverse p-r-10" data-toggle="tooltip"
                  title="Bon de Commande">
-                <i class="ti-printer"></i></a>
+                <i class="ti-printer"></i></a> &nbsp;
+            <input type="checkbox" *ngIf="clientIndex!=-1&&commande.client_id==clients[clientIndex].client_id">
             </td>
           </tr>
           </tbody>
