--- a/src/app/vente/livraison/add-livraison/add-livraison.component.html
+++ b/src/app/vente/livraison/add-livraison/add-livraison.component.html
@@ -5,7 +5,7 @@
     <div class="form-group row">
       <label class="col-sm-3 control-label">Client</label>
       <div class="col-sm-6">
-        <select class="form-control" [(ngModel)]="commande.client" name="mpSelect">
+        <select class="form-control" [(ngModel)]="livraison.client" name="mpSelect">
           <option *ngFor="let c of clients, let i=index" [ngValue]="c">{{c.name}}</option>
         </select>
       </div>
@@ -15,6 +15,19 @@
           <div class="glyphicon glyphicon-plus"></div> &nbsp;Ajouter
         </button>
       </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-sm-3 control-label">Date d'écheance</label>
+      <div class="col-sm-3">
+        <input [(ngModel)]="livraison.date_echeance" id="date_echeance" name="date_echeance"
+               placeholder="Date d'echeance" class="form-control input-md" required="" type="date">
+      </div>
+      <label class="col-sm-1 control-label">Date</label>
+      <div class="col-sm-3">
+        <input [(ngModel)]="livraison.date" id="date" name="date"
+        placeholder="Date" class="form-control input-md" required="" type="date">
+      </div>
+
     </div>
     <table [ngBusy]="busy" class="table table-striped table-bordered  dataTable no-footer" id="datatable"
            role="grid" aria-describedby="datatable_info">
@@ -46,13 +59,13 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let ligne of commande.lignes_commande; let i = index" role="row">
+      <tr *ngFor="let ligne of livraison.produits; let i = index" role="row">
         <td>
           {{i+1}}
         </td>
         <td>
           <div *ngIf="ligne.editMode!=0">
-            <select class="select-product-{{i}} form-control" name="productSelect{{i}}">
+            <select class="select-product-{{i}} form-control" name="productSelect">
               <option *ngFor="let product of produits, let j=index" value="{{j}}">{{product.label}}</option>
             </select>
           </div>
