--- a/src/app/vente/livraison/list-livraison/list-livraison.component.html
+++ b/src/app/vente/livraison/list-livraison/list-livraison.component.html
@@ -63,6 +63,7 @@
               <th>Reference</th>
               <th>Code a barre</th>
               <th>prix/exemplaire</th>
+              <th>Quantité</th>
               <th>Gratuités</th>
               <th>Remise</th>
               <th>Cout</th>
@@ -74,6 +75,7 @@
               <td>{{p.produit.reference}}</td>
               <td>{{p.produit.codeABarre}}</td>
               <td>{{p.produit.prix}}</td>
+              <td>{{p.quantite}}</td>
               <td>{{p.gratuite}}</td>
               <td>{{p.remise}}%</td>
               <td>{{p.produit.prix*p.quantite}}DT</td>
