--- a/src/app/production/lot/list-lot/list-lot.component.html
+++ b/src/app/production/lot/list-lot/list-lot.component.html
@@ -155,6 +155,9 @@
                             <i class="fa fa-pencil"></i></a>
 
               </div>
+                   <a (click)="ficheDeControle(l.lot_id)" class="text-inverse p-r-10" data-toggle="tooltip"
+                           title="Ordre de Fabrication">
+                    <i class="ti-printer"></i></a>
 
 
             </td>
@@ -234,6 +237,7 @@
                  data-toggle="tooltip" title="Confirmer">
                 <i class="fa fa-pencil"></i></a>
             </div>
+
 
       </td>
       </tr>
