--- a/src/app/production/produit/list-produit/list-produit.component.html
+++ b/src/app/production/produit/list-produit/list-produit.component.html
@@ -35,6 +35,9 @@
                 aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Seuil Alerte
             </th>
             <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Taxes
+            </th>
+            <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
                 aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Composition
             </th>
             <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
@@ -96,6 +99,16 @@
               {{p.seuil}}
               <i style="color: red" class="fa fa-warning" *ngIf="p.seuil>p.quantite_disponible"></i>
               </div>
+              </td>
+              <td>
+               <select *ngIf="p.taxes.length != 0" id="taxeSelect"
+                 class="select-taxe-{{i}} form-control" name="taxeSelect">
+                   <option  *ngFor="let taxe of p.taxes, let j=index" value="{{taxe.taxe_id}}">{{taxe.label}}
+                   ({{taxe.pourcentage}} %)</option>
+                 </select>
+                 <div *ngIf="p.taxes.length == 0">
+                 Pas de taxes
+                </div>
               </td>
               <td>
 
