--- a/src/app/vente/livraison/add-livraison/add-livraison.component.html
+++ b/src/app/vente/livraison/add-livraison/add-livraison.component.html
@@ -1,19 +1,14 @@
 <div class="card-box">
-  <h4 class="header-title m-t-0 m-b-30">Enregistrer une Commande</h4>
+  <h4 class="header-title m-t-0 m-b-30">Enregistrer une Livraison</h4>
   <form class="form-horizontal" role="form">
 
     <div class="form-group row">
-      <label class="col-sm-3 control-label">Client</label>
-      <div class="col-sm-6">
-        <select class="form-control" [(ngModel)]="livraison.client" name="mpSelect">
-          <option *ngFor="let c of clients, let i=index" [ngValue]="c">{{c.name}}</option>
+      <label class="col-sm-1 control-label"><h4>Client: </h4></label>
+      <div class="col-sm-5">
+        <select *ngIf="clients" class="form-control" name="clientsSelect" id="clientsSelect">
+          <option value="-1">Tous les Clients</option>
+          <option *ngFor="let c of clients, let i=index" value="{{i}}">{{c.name}}</option>
         </select>
-      </div>
-      <div class="col-sm-3">
-        <button id="addClient" class="btn btn-primary waves-effect waves-light" data-toggle="modal"
-                data-target="#add-client-modal">
-          <div class="glyphicon glyphicon-plus"></div> &nbsp;Ajouter
-        </button>
       </div>
     </div>
     <div class="form-group row">
@@ -25,7 +20,7 @@
       <label class="col-sm-1 control-label">Date</label>
       <div class="col-sm-3">
         <input [(ngModel)]="livraison.date" id="date" name="date"
-        placeholder="Date" class="form-control input-md" required="" type="date">
+               placeholder="Date" class="form-control input-md" required="" type="date">
       </div>
 
     </div>
@@ -146,65 +141,4 @@
   </div>
 
 
-</div>
-
-
-<!--adding client form-->
-<div id="add-client-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true" *ngIf="villes">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" aria-hidden="true"
-                (click)="cleanAddClientModal()">X
-        </button>
-        <h4 class="modal-title" id="myModalLabel">Ajouter un client</h4></div>
-      <div class="modal-body">
-        <form class="form-horizontal">
-          <label class="col-md-12"> <span class="help">Client</span></label>
-          <div class="col-md-4">
-            <input type="text" class="form-control form-control-line" placeholder="Nom"
-                   [(ngModel)]="toAddClient.name" name="name-client">
-          </div>
-          <div class="col-md-4">
-            <input type="email" class="form-control form-control-line" placeholder="Email"
-                   [(ngModel)]="toAddClient.email" name="email-client">
-          </div>
-          <div class="col-md-4">
-            <input type="number" class="form-control form-control-line" placeholder="Mobile"
-                   [(ngModel)]="toAddClient.mobile" name="mobile-client">
-          </div>
-          <div class="col-md-4" style="margin-top: 2%">
-            <select [(ngModel)]="toAddClient.type" class="form-control" name="typeSelect">
-              <option *ngFor="let type of types, let i=index" [ngValue]="type">{{type.nom}}</option>
-            </select>
-          </div>
-          <div class="col-md-4" style="margin-top: 2%">
-            <select [(ngModel)]="selectedVille" class="form-control" name="villeSelect">
-              <option *ngFor="let ville of villes, let i=index" [ngValue]="ville">{{ville.nom}}</option>
-            </select>
-          </div>
-          <div class="col-md-4" style="margin-top: 2%">
-            <select [(ngModel)]="toAddClient.region" class="form-control" name="regionSelect">
-              <option *ngFor="let region of selectedVille.region, let i=index" [ngValue]="region">{{region.nom}}</option>
-            </select>
-          </div>
-          <div class="form-group" style="text-align: center">
-            <button *ngIf="!validChampsClient()" disabled class="btn btn-danger" style="margin-top: 0.5%">Confirmer
-              &nbsp;
-              <div class="glyphicon glyphicon-chevron-right"></div>
-            </button>
-            <button *ngIf="validChampsClient()" class="btn btn-success" style="margin-top: 0.5%"
-                    (click)="addClient()">Confirmer &nbsp;
-              <div class="glyphicon glyphicon-chevron-right"></div>
-            </button>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-info waves-effect" (click)="cleanAddClientModal()">Close
-        </button>
-      </div>
-    </div>
-  </div>
 </div>
