--- a/src/app/production/produit/list-produit/list-produit.component.html
+++ b/src/app/production/produit/list-produit/list-produit.component.html
@@ -1,4 +1,3 @@
-
 <!-- TODO fix size of inputs in datatable-->
 <div class="container">
   <div class="row">
@@ -50,90 +49,95 @@
           </tr>
           </thead>
           <tbody>
-          <tr  *ngFor="let p of produits ; let i = index" role="row">
+          <tr *ngFor="let p of produits ; let i = index" role="row">
 
             <td>
-             <div *ngIf="p.editMode != undefined && p.editMode !=0">
-              <input [(ngModel)]="p.label" id="label" name="label" type="text"
-                style="width:100%"   placeholder="Label" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="p.editMode == undefined || p.editMode ==0">
-              {{p.label}}
-              </div></td>
-
-              <td>
-             <div *ngIf="p.editMode != undefined && p.editMode !=0">
-              <input [(ngModel)]="p.reference" id="reference" name="reference" type="text"
-                 style="width:100%"  placeholder="Référence" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="p.editMode == undefined || p.editMode ==0">
-              {{p.reference}}
-              </div></td>
-              <td>
-             <div *ngIf="p.editMode != undefined && p.editMode !=0">
-              <input [(ngModel)]="p.codeABarre" id="codeABarre" name="codeABarre" type="text"
-                 style="width:100%"  placeholder="Code à barres" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="p.editMode == undefined || p.editMode ==0">
-              {{p.codeABarre}}
+              <div *ngIf="p.editMode != undefined && p.editMode !=0">
+                <input [(ngModel)]="p.label" id="label" name="label" type="text"
+                       style="width:100%" placeholder="Label" class="form-control input-block" required="">
               </div>
-              </td>
-               <td>
-             <div *ngIf="p.editMode != undefined && p.editMode !=0">
-              <input [(ngModel)]="p.prix" id="prix" name="prix" type="number"
-                 style="width:100%"  placeholder="Prix" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="p.editMode == undefined || p.editMode ==0">
-              {{p.prix}}
+              <div *ngIf="p.editMode == undefined || p.editMode ==0">
+                {{p.label}}
               </div>
-              </td>
-              <td>
-             <div *ngIf="p.editMode != undefined && p.editMode !=0">
-              <input [(ngModel)]="p.seuil" id="seuil" name="seuil" type="number"
-                 style="width:100%"  placeholder="seuil" class="form-control input-block" required="">
-             </div>
-             <div *ngIf="p.editMode == undefined || p.editMode ==0">
-              {{p.seuil}}
-              <i style="color: red" class="fa fa-warning" *ngIf="p.seuil>p.quantite_disponible"></i>
-              </div>
-              </td>
-              <td>
-
-            <a (click)="openComposition(i)" class="label  label-info"
-                      data-toggle="modal" data-target="#list-composition-modal"  title="Confirmer">
-                                        <i class="ti-list"></i></a>
-
-              </td>
-              <td>
-            <div *ngIf="p.editMode != undefined && p.editMode !=0">
-                          <input [(ngModel)]="p.quantite_disponible" id="quantite_disponible" name="quantite_disponible" type="number"
-                             style="width:100%"  placeholder="quantite_disponible" class="form-control input-block" required="">
-                         </div>
-                         <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                          {{p.quantite_disponible}}
-                          </div></td>
-              <td>
-
-            <div *ngIf="p.editMode != undefined && p.editMode !=0">
-                          <input [(ngModel)]="p.quantite_physique" id="quantite_physique" name="quantite_physique" type="number"
-                             style="width:100%"  placeholder="quantite_physique" class="form-control input-block" required="">
-                         </div>
-                         <div *ngIf="p.editMode == undefined || p.editMode ==0">
-                          {{p.quantite_physique}}
-                          </div>
             </td>
 
             <td>
-            <!-- TODO What to do when price changes?, calcul??..-->
               <div *ngIf="p.editMode != undefined && p.editMode !=0">
-                          <a (click)="confirmLigne(i)" class=" label label-default on-editing save-row"
-                             data-toggle="tooltip" title="Confirmer">
-                            <i class="fa fa-save"></i></a>
-                        </div>
+                <input [(ngModel)]="p.reference" id="reference" name="reference" type="text"
+                       style="width:100%" placeholder="Référence" class="form-control input-block" required="">
+              </div>
+              <div *ngIf="p.editMode == undefined || p.editMode ==0">
+                {{p.reference}}
+              </div>
+            </td>
+            <td>
+              <div *ngIf="p.editMode != undefined && p.editMode !=0">
+                <input [(ngModel)]="p.codeABarre" id="codeABarre" name="codeABarre" type="text"
+                       style="width:100%" placeholder="Code à barres" class="form-control input-block" required="">
+              </div>
+              <div *ngIf="p.editMode == undefined || p.editMode ==0">
+                {{p.codeABarre}}
+              </div>
+            </td>
+            <td>
+              <div *ngIf="p.editMode != undefined && p.editMode !=0">
+                <input [(ngModel)]="p.prix" id="prix" name="prix" type="number"
+                       style="width:100%" placeholder="Prix" class="form-control input-block" required="">
+              </div>
+              <div *ngIf="p.editMode == undefined || p.editMode ==0">
+                {{p.prix}}
+              </div>
+            </td>
+            <td>
+              <div *ngIf="p.editMode != undefined && p.editMode !=0">
+                <input [(ngModel)]="p.seuil" id="seuil" name="seuil" type="number"
+                       style="width:100%" placeholder="seuil" class="form-control input-block" required="">
+              </div>
+              <div *ngIf="p.editMode == undefined || p.editMode ==0">
+                {{p.seuil}}
+                <i style="color: red" class="fa fa-warning" *ngIf="p.seuil>p.quantite_disponible"></i>
+              </div>
+            </td>
+            <td>
+
+              <a (click)="openComposition(i)" class="label  label-info"
+                 data-toggle="modal" data-target="#list-composition-modal" title="Confirmer">
+                <i class="ti-list"></i></a>
+
+            </td>
+            <td>
+              <div *ngIf="p.editMode != undefined && p.editMode !=0">
+                <input [(ngModel)]="p.quantite_disponible" id="quantite_disponible" name="quantite_disponible"
+                       type="number"
+                       style="width:100%" placeholder="quantite_disponible" class="form-control input-block"
+                       required="">
+              </div>
+              <div *ngIf="p.editMode == undefined || p.editMode ==0">
+                {{p.quantite_disponible}}
+              </div>
+            </td>
+            <td>
+
+              <div *ngIf="p.editMode != undefined && p.editMode !=0">
+                <input [(ngModel)]="p.quantite_physique" id="quantite_physique" name="quantite_physique" type="number"
+                       style="width:100%" placeholder="quantite_physique" class="form-control input-block" required="">
+              </div>
+              <div *ngIf="p.editMode == undefined || p.editMode ==0">
+                {{p.quantite_physique}}
+              </div>
+            </td>
+
+            <td>
+              <!-- TODO What to do when price changes?, calcul??..-->
+              <div *ngIf="p.editMode != undefined && p.editMode !=0">
+                <a (click)="confirmLigne(i)" class=" label label-default on-editing save-row"
+                   data-toggle="tooltip" title="Confirmer">
+                  <i class="fa fa-save"></i></a>
+              </div>
               <div *ngIf="p.editMode == undefined || p.editMode==0">
-                          <a (click)="editLigne(i)" class="label label-default text-inverse p-r-10"
-                             data-toggle="tooltip" title="Confirmer">
-                            <i class="fa fa-pencil"></i></a>
+                <a (click)="editLigne(i)" class="label label-default text-inverse p-r-10"
+                   data-toggle="tooltip" title="Confirmer">
+                  <i class="fa fa-pencil"></i></a>
 
               </div>
 
@@ -154,93 +158,98 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content" [ngBusy]="modalBusy">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" (click)="cleanCompositionModal()" aria-hidden="true">×</button>
+        <button type="button" class="close" data-dismiss="modal" (click)="cleanCompositionModal()" aria-hidden="true">
+          ×
+        </button>
         <h4 class="modal-title" id="myModalLabel">Composition du produit:
           Ref : {{selectedProduit?.reference}} - {{selectedProduit?.label}}</h4></div>
       <div class="modal-body">
 
 
-    <table  class="table  table-striped table-bordered  dataTable no-footer" id="datatable2"
-           role="grid" aria-describedby="datatable_info">
-      <thead>
-      <tr role="row">
-        <th tabindex="0" class="sorting_asc" aria-controls="datatable" style="width: 170px;"
-            aria-label="Name: activate to sort column descending" aria-sort="ascending" rowspan="1"
-            colspan="1">N°
-        </th>
-        <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-            aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Produit de Base
-        </th>
+        <table class="table  table-striped table-bordered  dataTable no-footer" id="datatable2"
+               role="grid" aria-describedby="datatable_info">
+          <thead>
+          <tr role="row">
+            <th tabindex="0" class="sorting_asc" aria-controls="datatable" style="width: 170px;"
+                aria-label="Name: activate to sort column descending" aria-sort="ascending" rowspan="1"
+                colspan="1">N°
+            </th>
+            <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Produit de Base
+            </th>
 
-        <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-            aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Quantité
-        </th>
+            <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Quantité
+            </th>
 
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let ligne of selectedProduit?.produit_produit_bases;
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let ligne of selectedProduit?.produit_produit_bases;
       let i = index" role="row">
-        <td>
-          {{i+1}}
-        </td>
+            <td>
+              {{i+1}}
+            </td>
 
-        <td>
-          <div *ngIf="testEditProduit() && ligne.editMode != undefined && ligne.editMode!=0">
-            <select class="select-product-{{i}} form-control" name="productSelect">
-              <option *ngFor="let product of produits_bases, let j=index" value="{{j}}">{{product.label}}
-              ({{product.unite.indice}})</option>
-            </select>
-          </div>
-          <div *ngIf="!testEditProduit() || ligne.editMode == undefined || ligne.editMode==0">
-            {{ligne.produit_base.label}} ({{ligne.produit_base.unite.indice}})
-          </div>
-        </td>
-
-
-        <td>
-          <div *ngIf="testEditProduit() && ligne.editMode != undefined && ligne.editMode!=0">
-            <input [(ngModel)]="ligne.quantite" id="quantite" name="quantite" type="number"
-                   placeholder="Quantité" class="form-control input-md" required="">
-          </div>
-          <div *ngIf="!testEditProduit() || ligne.editMode == undefined || ligne.editMode==0">
-            {{ligne.quantite}}
-          </div>
-        </td>
-
-        <td>
-          <div *ngIf="testEditProduit() && ligne.editMode != undefined && ligne.editMode!=0">
-            <a (click)="confirmLigne2(i)" class="on-editing save-row"
-               data-toggle="tooltip" title="Confirmer">
-              <i class="fa fa-save"></i></a>
-           <a *ngIf="enabled == false" (click)="deleteLigne2(i)" class="text-inverse p-r-10"
-                         data-toggle="tooltip" title="Delete">
-                        <i class="fa fa-trash-o"></i></a>
+            <td>
+              <div *ngIf="testEditProduit() && ligne.editMode != undefined && ligne.editMode!=0">
+                <select class="select-product-{{i}} form-control" name="productSelect">
+                  <option *ngFor="let product of produits_bases, let j=index" value="{{j}}">{{product.label}}
+                    ({{product.unite.indice}})
+                  </option>
+                </select>
+              </div>
+              <div *ngIf="!testEditProduit() || ligne.editMode == undefined || ligne.editMode==0">
+                {{ligne.produit_base.label}} ({{ligne.produit_base.unite.indice}})
+              </div>
+            </td>
 
 
-          </div>
-          <div *ngIf="!testEditProduit() || ligne.editMode == undefined || ligne.editMode==0">
-            <a (click)="editLigne2(i)" class="text-inverse p-r-10"
-               data-toggle="tooltip" title="Confirmer">
-              <i class="fa fa-pencil"></i></a>
-            <a (click)="deleteLigne2(i)" class="text-inverse p-r-10"
-               data-toggle="tooltip" title="Delete">
-              <i class="fa fa-trash-o"></i></a>
+            <td>
+              <div *ngIf="testEditProduit() && ligne.editMode != undefined && ligne.editMode!=0">
+                <input [(ngModel)]="ligne.quantite" id="quantite" name="quantite" type="number"
+                       placeholder="Quantité" class="form-control input-md" required="">
+              </div>
+              <div *ngIf="!testEditProduit() || ligne.editMode == undefined || ligne.editMode==0">
+                {{ligne.quantite}}
+              </div>
+            </td>
 
-            <a *ngIf="enabled == true" (click)="addLigne(i)" class="on-editing save-row"
-               data-toggle="tooltip" title="Confirmer">
-              <i class="fa fa-plus"></i></a>
-          </div>
-        </td>
-      </tr>
-      </tbody>
-    </table>
+            <td>
+              <div *ngIf="testEditProduit() && ligne.editMode != undefined && ligne.editMode!=0">
+                <a (click)="confirmLigne2(i)" class="on-editing save-row"
+                   data-toggle="tooltip" title="Confirmer">
+                  <i class="fa fa-save"></i></a>
+                <a *ngIf="enabled == false" (click)="deleteLigne2(i)" class="text-inverse p-r-10"
+                   data-toggle="tooltip" title="Delete">
+                  <i class="fa fa-trash-o"></i></a>
 
-          </div>
+
+              </div>
+              <div *ngIf="!testEditProduit() || ligne.editMode == undefined || ligne.editMode==0">
+                <a (click)="editLigne2(i)" class="text-inverse p-r-10"
+                   data-toggle="tooltip" title="Confirmer">
+                  <i class="fa fa-pencil"></i></a>
+                <a (click)="deleteLigne2(i)" class="text-inverse p-r-10"
+                   data-toggle="tooltip" title="Delete">
+                  <i class="fa fa-trash-o"></i></a>
+
+                <a *ngIf="enabled == true" (click)="addLigne(i)" class="on-editing save-row"
+                   data-toggle="tooltip" title="Confirmer">
+                  <i class="fa fa-plus"></i></a>
+              </div>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+
+      </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanCompositionModal()">Close
+        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanCompositionModal()">
+          Close
         </button>
-        <button type="button" class="btn btn-success waves-effect" data-dismiss="modal" (click)="editComposition()">Confirmer
+        <button type="button" class="btn btn-success waves-effect" data-dismiss="modal" (click)="editComposition()">
+          Confirmer
         </button>
       </div>
     </div>
