--- a/src/app/produit-base/list-commande/list-commande.component.html
+++ b/src/app/produit-base/list-commande/list-commande.component.html
@@ -1,7 +1,17 @@
 <div class="card-box" *ngIf="commandes">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="m-b-30">
+        <button id="addProduct" class="btn btn-primary waves-effect waves-light"
+                [routerLink]="['/produit-base/commande/add']">Ajouter Commande d'achat<i
+          class="fa fa-plus"></i></button>
+      </div>
+    </div>
+  </div>
+
   <h4 class="header-title m-t-0 m-b-30">Listes des Commandes d'achat de produits</h4>
 
-  <table class="table table-striped table-bordered  dataTable no-footer" id="datatable"
+  <table [ngBusy]="busy" class="table table-striped table-bordered  dataTable no-footer" id="datatable"
          role="grid" aria-describedby="datatable_info">
     <thead>
     <tr role="row">
@@ -35,10 +45,12 @@
         {{cmd.created_at}}
       </td>
       <td>
-        {{cmd.montant}}
+        {{cmd.montant}} DT
       </td>
       <td>
-        {{cmd.etat}}
+        <div class="label" [ngClass]="{'label-success': cmd.etat == 1,
+            'label-warning':cmd.etat == 0}">{{ cmd.etat===0 ? "Non Converti" : "Converti"}}
+        </div>
       </td>
       <td>
         {{cmd.fournisseur.nom}}
@@ -46,7 +58,19 @@
       <td>
         <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-prod-modal"
            (click)="detailsCmd(i)"><i class="fa fa-align-left"></i></a> &nbsp;
-        <a href="#/produit/achat/{{cmd.commande_achat_id}}" class="on-default edit-row"><div class="glyphicon glyphicon-shopping-cart"></div></a> &nbsp;
+        <a [routerLink]="['/produit-base/achat/'+cmd.commande_achat_id]" data-toggle="tooltip"
+           title="Convertir en achat"
+           class="on-default edit-row">
+          <div class="glyphicon glyphicon-shopping-cart"></div>
+        </a> &nbsp;
+
+        <a *ngIf="cmd.etat==0" [routerLink]="['/produit-base/commande/'+cmd.commande_achat_id+'/edit-command']"
+           class="label label-default text-white p-r-10"
+           data-toggle="tooltip" title="Modifier">
+          <i class="fa fa-pencil"></i></a>
+        <a (click)="deleteCommandeAchat(i)" class="label label-danger text-white p-r-10"
+           data-toggle="tooltip" title="Confirmer">
+          <i class="fa fa-remove"></i></a>
       </td>
     </tr>
     </tbody>
@@ -60,7 +84,8 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-        <h4 class="modal-title" id="myModalLabel">Liste de Produits de la commande #{{cmd.commande_achat_id}}:</h4></div>
+        <h4 class="modal-title" id="myModalLabel">Liste de Produits de la commande #{{cmd.commande_achat_id}}:</h4>
+      </div>
       <div class="modal-body">
         <div class="editable-responsive">
           <table class="table table-striped" id="prods">
@@ -87,7 +112,7 @@
         <h4>Cout Total: {{cmd.montant}}DT</h4>
         <h4>Date de Création: {{cmd.created_at}}</h4>
         <hr>
-        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" >Close
+        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal">Close
         </button>
       </div>
     </div>
