--- a/src/app/vente/commande/list-commande/list-commande.component.html
+++ b/src/app/vente/commande/list-commande/list-commande.component.html
@@ -59,11 +59,12 @@
               <a (click)="bon(commande.commande_id)" class="text-inverse p-r-10" data-toggle="tooltip"
                  title="Bon de Commande">
                 <i class="ti-printer"></i></a> &nbsp;
-            <input type="checkbox" *ngIf="clientIndex!=-1&&commande.client_id==clients[clientIndex].client_id">
+            <input [(ngModel)]="commandes[i].selected" type="checkbox" *ngIf="clientIndex!=-1&&commande.client_id==clients[clientIndex].client_id">
             </td>
           </tr>
           </tbody>
         </table>
+        <button class ='btn-success btn-lg' style="margin-left: 81%;" *ngIf="clientIndex!=-1" (click)="convert()">Convertir en Livraison</button>
       </div>
     </div>
   </div>
